correct alignment of images

--- a/src/BenChiverton.Blog/About/About.razor.css
+++ b/src/BenChiverton.Blog/About/About.razor.css
@@ -1,4 +1,5 @@
 .about-container {
+    display: inline-block;
 }
 
 .about-image {
