--- a/src/BenChiverton.Blog/Home/Home.razor.css
+++ b/src/BenChiverton.Blog/Home/Home.razor.css
@@ -1,7 +1,3 @@
-.content {
-    padding-top: 1.1rem;
-}
-
 .widget-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
